--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -7,18 +7,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FBI</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% bootstrap_css %}
     {% block css %}{% endblock css %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <style>
+        .nav-logo-size {
+            width: 5rem;
+        }
+
+        .footer-size {
+            height: 5rem;
+        }
+
+        h2 {
+            line-height: 3;
+        }
+
+        .search-box {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            height: 40px;
+            padding: 0px;
+            border-radius: 40px;
+            background: #e5e7e9;
+        }
+
+        .search-btn {
+            color: #3c2dd8;
+            float: right;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: #e5e7e9;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 0;
+        }
+
+        .search-txt {
+            float: ;
+            padding: 0;
+            background: none;
+            border: none;
+            outline: none;
+            color: rgb(69, 72, 181);
+            font-size: 30px;
+            line-height: 5px;
+        }
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-white bg-white py-0 sticky-top opacity-75">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'root' %}">
-                <img src="https://cdn-icons-png.flaticon.com/512/3223/3223092.png" alt="" width="30px">
+                <img src="https://cdn-icons-png.flaticon.com/512/2035/2035012.png" alt="" width="30px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,13 +79,21 @@
             <div class="collapse navbar-collapse  justify-content-between " id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <div class="navbar-nav fw-bold">
-                        <a class="nav-link" aria-current="page" href="{% url 'users:index' %}">회원 목록</a>
+                        <a class="nav-link" aria-current="page" href="{% url 'users:index' %}">회원정보</a>
                     </div>
                     <div class="navbar-nav fw-bold">
-                        <a class="nav-link" aria-current="page" href="">리뷰 목록</a>
+                        <a class="nav-link" aria-current="page" href="">카테고리</a>
                     </div>
                     <div class="navbar-nav fw-bold">
-                        <a class="nav-link" aria-current="page" href="">영화 목록</a>
+                        <a class="nav-link" aria-current="page" href="">맛집 리스트</a>
+                    </div>
+                    <div class="search-box">
+                        <form action="." method="post">
+                            <input class="search-txt" type="text" placeholder=" 맛집 단속">
+                            <button class="search-btn" type="submit" maxlength="40">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </form>
                     </div>
                 </div>
                 <div class="navbar-nav">
@@ -58,7 +118,31 @@
             </div>
         </div>
         </div>
+        
     </nav>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     <div class="container">
         {% block body %}{% endblock body %}
     </div>
