--- a/Restaurant/templates/restaurant/index.html
+++ b/Restaurant/templates/restaurant/index.html
@@ -5,4 +5,21 @@
 {% if request.user.is_authenticated %}
 <a class="btn btn-primary my-3 float-right" href="{% url 'Restaurant:create' %}">가게 작성하기</a>
 {% endif %}
+<div class="container d-flex row">
+    {% for content in contents %}
+    <div class="card col-4 m-2 p-0" style="width: 18rem;" onclick="location.href='/Restaurant/{{ Restaurant.id }}/'">
+        <a class="text-decoration-none">
+            {% if 'jpg' in content.img %}
+            <img src="{{ content.img }}" class="card-img-top" style="height: 400px;">
+            {% else %}
+            <img src="{% static 'logo.jpg' %}" class="card-img-top" style="height: 400px;">
+            {% endif %}
+            <div class="card-body">
+                <p class="card-text text-center fw-bold">{{ content.name }}</p>
+            </div>
+        </a>
+    </div>
+    {% endfor %}
+</div>
+
 {% endblock %}
