--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -13,54 +13,6 @@
     {% bootstrap_css %}
     {% block css %}{% endblock css %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <style>
-        .nav-logo-size {
-            width: 5rem;
-        }
-
-        .footer-size {
-            height: 5rem;
-        }
-
-        h2 {
-            line-height: 3;
-        }
-
-        .search-box {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            height: 40px;
-            padding: 0px;
-            border-radius: 40px;
-            background: #e5e7e9;
-        }
-
-        .search-btn {
-            color: #3c2dd8;
-            float: right;
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background: #e5e7e9;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border: 0;
-        }
-
-        .search-txt {
-            float: ;
-            padding: 0;
-            background: none;
-            border: none;
-            outline: none;
-            color: rgb(69, 72, 181);
-            font-size: 30px;
-            line-height: 5px;
-        }
-    </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -85,7 +37,7 @@
                         <a class="nav-link" aria-current="page" href="">카테고리</a>
                     </div>
                     <div class="navbar-nav fw-bold">
-                        <a class="nav-link" aria-current="page" href="">맛집 리스트</a>
+                        <a class="nav-link" aria-current="page" href="{% url 'Restaurant:index' %}">맛집 리스트</a>
                     </div>
                     <div class="search-box">
                         <form action="." method="post">
@@ -120,29 +72,7 @@
         </div>
         
     </nav>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+
     <div class="container">
         {% block body %}{% endblock body %}
     </div>
