--- a/Restaurant/templates/restaurant/index.html
+++ b/Restaurant/templates/restaurant/index.html
@@ -7,7 +7,7 @@
 {% endif %}
 <div class="container d-flex row">
     {% for content in contents %}
-    <div class="card col-4 m-2 p-0" style="width: 18rem;" onclick="location.href='/Restaurant/{{ Restaurant.id }}/'">
+    <div class="card col-4 m-2 p-0" style="width: 18rem;" onclick="location.href='/Restaurant/{{ content.id }}/'">
         <a class="text-decoration-none">
             {% if 'jpg' in content.img %}
             <img src="{{ content.img }}" class="card-img-top" style="height: 400px;">
