--- a/Restaurant/templates/restaurant/search.html
+++ b/Restaurant/templates/restaurant/search.html
@@ -13,7 +13,7 @@
             <div class="card">
                 <div class="card-body">
                     <h3>{{ r.name }}</h3>
-                    <p>{{ r.category }}<a href="{% url 'Restaurant:detail' r.id %}"> 자세히 보기</a></p> 
+                    <p>{{ r.category }}&nbsp;&nbsp;<a href="{% url 'Restaurant:detail' r.id %}"> 자세히 보기</a></p> 
                 </div>
             </div>
         </div>
