--- a/Restaurant/templates/restaurant/detail.html
+++ b/Restaurant/templates/restaurant/detail.html
@@ -4,11 +4,11 @@
 {% block body %}
 <!-- 가게 정보 -->
 <div class="d-flex">
-    <div class="text-white ms-5">
-        <h1>{{info.name}}</h1>
-        <p class="mt-5">{{info.address}}</p>
-        <p class="mt-5">{{info.category}}</p>
-        <p class="mt-5">{{info.menu}}</p>
+    <div class="text-black ms-5">
+        <h2>{{info.name}}</h2>
+        <p class="mt-5"><b>주소</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{info.address}}</p>
+        <p class="mt-5"><b>종류</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{info.category}}</p>
+        <p class="mt-5"><b>메뉴</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{info.menu}}</p>
         {% if info.image %}
         <img src="{{info.image.url}}" alt="{{info.image}}">
         {% endif %}
@@ -48,7 +48,7 @@
             <td>{{ review.writer }}</td>
             <td>
                 {% if request.user.is_authenticated %}
-                <a class="btn btn-success btn-sm" href="">수정</a>
+                <a class="btn btn-success btn-sm" href="{% url 'reviews:update' review.pk %}">수정</a>
                 <form class='m-0' action="" method="POST">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger btn-sm">삭제</button>
