--- a/Restaurant/templates/restaurant/index.html
+++ b/Restaurant/templates/restaurant/index.html
@@ -15,7 +15,7 @@
             <img src="https://dummyimage.com/1200x960/000000/c4c4c4" alt="image" class="card-img-top" style="height: 400px;">
             {% endif %}
             <div class="card-body">
-                <p class="card-text text-center fw-bold">{{ content.name }}</p>
+                <p class="card-text text-center fw-bold">{{ content.title }}</p>
             </div>
         </a>
     </div>
