--- a/Restaurant/templates/restaurant/search.html
+++ b/Restaurant/templates/restaurant/search.html
@@ -12,7 +12,7 @@
         <div class="container"> 
             <div class="card">
                 <div class="card-body">
-                    <h3>{{ r.name }}</h3>
+                    <h3>{{ r.title }}</h3>
                     <p>{{ r.category }}&nbsp;&nbsp;<a href="{% url 'Restaurant:detail' r.id %}"> 자세히 보기</a></p> 
                 </div>
             </div>
