--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FBI</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% bootstrap_css %}
@@ -44,8 +45,8 @@
                     <div class="search-box">
                         <form action="{% url 'Restaurant:search' %}" method="post">
                             {% csrf_token %}
-                            <input class="search-txt" type="text" placeholder=" 맛집 단속" name="q" value="{{q}}">
-                            <button class="search-btn" type="submit" maxlength="40">
+                            <input class="search-txt" type="text" placeholder=" 맛집 단속" size="20" name="q" value="{{q}}">
+                            <button class="search-btn" type="submit" maxlength="50">
                                 <i class="fas fa-search"></i>
                             </button>
                         </form>
