--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -35,68 +35,94 @@
 {% endif %}
 <hr>
 <div id="comments">
-{% for comment in comments %}
-  <p> {{ comment.user.username }} | {{ comment.content }}</p>
-  <hr>    
-{% empty %}
-  <p>댓글이 없어요 ㅠ_ㅠ</p>
-{% endfor %}
+    {% for comment in comments %}
+      
+    <div class="d-flex justify-content-between flex-column">
+        <div class="d-flex  justify-content-between">
+            <h6 class="link mx-4">
+                <a class="title_link" href="{% url 'users:detail' comment.user.pk %}">
+                    {{ comment.user.username }}</a>
+            </h6>
+            <h6 class="link mx-4">
+                {{ comment.created_at }}
+            </h6>
+        </div>
+        <p>
+        <div class="d-flex  justify-content-between">
+            <h6 class="mx-4 flex-fill">{{ comment.content }} </h6>
+            <div class="commet-btn">
+                {% if request.user == comment.user %}
+                <form action="{% url 'reviews:comment_delete' comment.review.pk comment.pk %}" method="POST">
+                    {% csrf_token %}
+                    <button class="float-end btn btn-dark  btn-sm ">DEL</button>
+                </form>
+                {% else %}
+    
+                {% endif %}
+            </div>
+        </div>
+        </p>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script>
-  // (1) 좋아요 버튼
-  const likeBtn = document.querySelector('#like-btn')
-  // (2) 좋아요 버튼을 클릭하면, 함수 실행
-  likeBtn.addEventListener('click', function (event) {
-    // 서버로 비동기 요청을 하고 싶음
-    console.log(event.target.dataset)
-    axios({
-      method: 'get',
-      url: `/reviews/${event.target.dataset.articleId}/like/`
-    })
-    .then(response => {
-      console.log(response)
-      console.log(response.data)
-      // event.target.classList.toggle('bi-heart')
-      // event.target.classList.toggle('bi-heart-fill')
-      if (response.data.isLiked === true) {
-        event.target.classList.add('bi-heart-fill')
-        event.target.classList.remove('bi-heart')
-      } else {
-        event.target.classList.add('bi-heart')
-        event.target.classList.remove('bi-heart-fill')
-      }
-      const likeCount = document.querySelector('#like-count')
-      likeCount.innerText = response.data.likeCount
-    })
-  })
-</script>
-<script>
-  // 댓글!
-  // (1) 댓글 폼
-  const commentForm = document.querySelector('#comment-form')
-  // (2) 제출하면, 함수 실행시킬래 
-  // csrf 
-  const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
-  commentForm.addEventListener('submit', function(event) {
-    event.preventDefault();
-    axios({
-      method: 'post',
-      url: `/reviews/${event.target.dataset.articleId}/comments/`,
-      headers: {'X-CSRFToken': csrftoken},
-      data: new FormData(commentForm) // 폼에 있는 정보를 data로 넘겨줄 수 있도록 변환
-    })
-    .then(response => {
-      console.log(response.data)
-      // 댓글을 추가하는 로직
-      const comments = document.querySelector('#comments')
-      const p = document.createElement('p')
-      p.innerText = `${response.data.userName} | ${response.data.content}`
-      const hr = document.createElement('hr')
-      comments.append(p, hr) 
-      commentForm.reset()
-    })
-  })
-</script> 
-{% endblock %}
+      <hr>    
+    {% empty %}
+      <p>댓글이 없어요 ㅠ_ㅠ</p>
+    {% endfor %}
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+      // (1) 좋아요 버튼
+      const likeBtn = document.querySelector('#like-btn')
+      // (2) 좋아요 버튼을 클릭하면, 함수 실행
+      likeBtn.addEventListener('click', function (event) {
+        // 서버로 비동기 요청을 하고 싶음
+        console.log(event.target.dataset)
+        axios({
+          method: 'get',
+          url: `/reviews/${event.target.dataset.reviewId}/like/`
+        })
+        .then(response => {
+          console.log(response)
+          console.log(response.data)
+          // event.target.classList.toggle('bi-heart')
+          // event.target.classList.toggle('bi-heart-fill')
+          if (response.data.isLiked === true) {
+            event.target.classList.add('bi-heart-fill')
+            event.target.classList.remove('bi-heart')
+          } else {
+            event.target.classList.add('bi-heart')
+            event.target.classList.remove('bi-heart-fill')
+          }
+          const likeCount = document.querySelector('#like-count')
+          likeCount.innerText = response.data.likeCount
+        })
+      })
+    </script>
+    <script>
+      // 댓글!
+      // (1) 댓글 폼
+      const commentForm = document.querySelector('#comment-form')
+      // (2) 제출하면, 함수 실행시킬래 
+      // csrf 
+      const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
+      commentForm.addEventListener('submit', function(event) {
+        event.preventDefault();
+        axios({
+          method: 'post',
+          url: `/reviews/${event.target.dataset.reviewId}/comments/`,
+          headers: {'X-CSRFToken': csrftoken},
+          data: new FormData(commentForm) // 폼에 있는 정보를 data로 넘겨줄 수 있도록 변환
+        })
+        .then(response => {
+          console.log(response.data)
+          // 댓글을 추가하는 로직
+          const comments = document.querySelector('#comments')
+          const p = document.createElement('p')
+          p.innerText = `${response.data.userName} | ${response.data.content}`
+          const hr = document.createElement('hr')
+          comments.append(p, hr) 
+          commentForm.reset()
+        })
+      })
+    </script> 
+    {% endblock %}
