--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,10 +12,10 @@ h2 {
 
 .search-box {
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 40px;
+    height: 30px;
     padding: 0px;
     border-radius: 40px;
     background: #e5e7e9;
@@ -25,8 +25,8 @@ h2 {
 .search-btn {
     color: #3c2dd8;
     float: right;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     background: #e5e7e9;
     display: flex;
@@ -37,12 +37,13 @@ h2 {
 
 .search-txt {
     padding: 0;
+    padding-inline-start: 20px;
     background: none;
     border: none;
     outline: none;
-    color: rgb(69, 72, 181);
-    font-size: 30px;
-    line-height: 5px;
+    color: rgb(21, 5, 147);
+    font-size: 20px;
+    line-height: 10px;
 }
 
 .rsttop-header__download {
