--- a/pjt/templates/root.html
+++ b/pjt/templates/root.html
@@ -1,6 +1,47 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
+
 {% block body %}
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+        </div>
+        <div class="rsttop-header__download">
+            <ul class="rsttop-header__download-list">
+                <li class="rsttop-header__download-item">
+                    <a class="rsttop-header__download-target js-analytics" data-analytics-btn="/rst/top:KV_ios_btn"><img
+                            alt="Download on the App Store"
+                            src="https://tblg.k-img.com/images/restaurant/image/rsttop_download_appstore.png"></a>
+                </li>
+                <li class="rsttop-header__download-item">
+                    <a class="rsttop-header__download-target js-analytics"
+                        data-analytics-btn="/rst/top:KV_android_btn"><img alt="GET IT ON Google Play"
+                            src="https://tblg.k-img.com/images/restaurant/image/rsttop_download_googleplay.png"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"
+        style="height: 405px;">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next"
+        style="height: 405px;">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+
+</div>
+
+</div>
 <div class="row text-center mt-5">
     <h1>환영합니다!</h1>
     {% if user.is_authenticated %}
