--- a/users/templates/users/update.html
+++ b/users/templates/users/update.html
@@ -3,11 +3,11 @@
 
 {% block body %}
 <div class="row mt-5">
-    <h1 class="text-center mb-5">프로필 업데이트</h1>
+    <h1 class="text-center mb-5">프로필 수정하기</h1>
     <div class="d-flex justify-content-end">
         <a class="btn btn-outline-primary me-2" href="{%  url 'users:change_password' %}">비밀번호 변경</a>
         <a class="btn btn-outline-danger" href="{%  url 'users:delete' %}">회원탈퇴</a>
-        <a href="{% url 'users:profile_update' %}" class='btn btn-outline-success ms-5'>프로필 수정</a>
+        <a href="{% url 'users:profile_update' %}" class='btn btn-outline-success ms-2'>프로필 이미지 수정</a>
     </div>
     <form action="" method="POST" class="my-3">
         {% csrf_token %}
