--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -20,7 +20,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     {% block script %}{% endblock script %}
 </head>
-
 <body>
     <nav class="navbar navbar-expand-lg navbar-white bg-white py-0 sticky-top opacity-75">
         <div class="container-fluid">
@@ -34,7 +33,7 @@
             <div class="collapse navbar-collapse  justify-content-between " id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <div class="navbar-nav fw-bold">
-                        <a class="nav-link" aria-current="page" href="{% url 'users:index' %}">회원정보</a>
+                        <a class="nav-link" aria-current="page" href="{% url 'users:index' %}">회원목록</a>
                     </div>
                     <div class="navbar-nav fw-bold">
                         <a class="nav-link" aria-current="page" href="">카테고리</a>
@@ -77,7 +76,6 @@
         </div>
 
     </nav>
-
     
     <div class="container">
         {% block body %}{% endblock body %}
