--- a/Restaurant/templates/restaurant/index.html
+++ b/Restaurant/templates/restaurant/index.html
@@ -9,8 +9,8 @@
     {% for content in contents %}
     <div class="card col-4 m-2 p-0" style="width: 20rem;" onclick="location.href='/Restaurant/{{ content.id }}/'">
         <a class="text-decoration-none">
-            {% if content.image %}
-            <img src="{{ content.thumbnail.url }}" alt="{{content.image}}" class="card-img-top" style="height: 400px;">
+            {% if content.imgurl %}
+            <img src="{{ content.imgurl}}" alt="{{content.imgurl}}" class="card-img-top" style="height: 400px;">
             {% else %}
             <img src="https://dummyimage.com/1200x960/000000/c4c4c4" alt="image" class="card-img-top" style="height: 400px;">
             {% endif %}
