--- a/pjt/templates/root.html
+++ b/pjt/templates/root.html
@@ -2,48 +2,48 @@
 {% load django_bootstrap5 %}
 
 {% block body %}
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+<div class="container-fluid" style="padding: 0px; margin: 0px;">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+            </div>
+            <div class="box">
+                <ul class="box_inner">
+                    <li class="rsttop-header__download-item">
+                        <a class="rsttop-header__download-target js-analytics"
+                            data-analytics-btn="/rst/top:KV_ios_btn"><img alt="Download on the App Store"
+                                src="https://tblg.k-img.com/images/restaurant/image/rsttop_download_appstore.png"></a>
+                    </li>
+                    <li class="rsttop-header__download-item">
+                        <a class="rsttop-header__download-target js-analytics"
+                            data-analytics-btn="/rst/top:KV_android_btn"><img alt="GET IT ON Google Play"
+                                src="https://tblg.k-img.com/images/restaurant/image/rsttop_download_googleplay.png"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="carousel-item">
-            <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
-        </div>
-        <div class="rsttop-header__download">
-            <ul class="rsttop-header__download-list">
-                <li class="rsttop-header__download-item">
-                    <a class="rsttop-header__download-target js-analytics" data-analytics-btn="/rst/top:KV_ios_btn"><img
-                            alt="Download on the App Store"
-                            src="https://tblg.k-img.com/images/restaurant/image/rsttop_download_appstore.png"></a>
-                </li>
-                <li class="rsttop-header__download-item">
-                    <a class="rsttop-header__download-target js-analytics"
-                        data-analytics-btn="/rst/top:KV_android_btn"><img alt="GET IT ON Google Play"
-                            src="https://tblg.k-img.com/images/restaurant/image/rsttop_download_googleplay.png"></a>
-                </li>
-            </ul>
-        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"
-        style="height: 405px;">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next"
-        style="height: 405px;">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-
 </div>
 
-</div>
 <div class="row text-center mt-5">
-    <h1>환영합니다!</h1>
+    <h1>맛집 연방수사국에 오신것을 환영합니다!</h1>
     {% if user.is_authenticated %}
     <!-- 로그인 상태라면 작동하는 코드 -->
     <div>
@@ -55,12 +55,12 @@
     <!-- 로그아웃 상태라면 작동하는 코드 -->
     <!-- 회원인 경우 -->
     <div>
-        <p class="mt-5">회원이신가요?</p>
+        <p class="mt-5">요원이신가요?</p>
         <a class="btn btn-warning me-3" href="{%  url 'users:login' %}">로그인</a>
     </div>
     <!-- 회원이 아닌 경우 -->
     <div>
-        <p class="mt-5">회원이 아니신가요?</p>
+        <p class="mt-5">요원이 아니시라면 간단한 회원가입을 통해 요원이 되어 Food Box Information의 정보를 열람하실 수 있습니다</p>
         <div class="form d-flex justify-content-center my-3">
             <a class="btn btn-primary me-3" href="{%  url 'users:signup' %}">회원가입</a>
             <a class="btn btn-outline-primary" href="">익명으로 눈팅</a>
