--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,7 +14,7 @@ h2 {
     position: absolute;
     top: 55%;
     left: 50%;
-    
+
     transform: translate(-50%, -50%);
     height: 30px;
     padding: 0px;
@@ -47,7 +47,7 @@ h2 {
     line-height: 10px;
 }
 
-.rsttop-header__download {
+.box {
     color: #595960;
     outline: 0;
     margin: 0;
@@ -58,11 +58,17 @@ h2 {
     background: transparent;
     overflow-wrap: break-word;
     position: absolute;
-    bottom: 20px;
-    left: 800px;
+    width: 88%;
+    height: 99%;
+    overflow: hidden;
+    max-width: 1920px;
+    max-height: 600px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
 
-.rsttop-header__download-list {
+.box_inner {
     color: #595960;
     overflow-wrap: break-word;
     outline: 0;
@@ -74,8 +80,9 @@ h2 {
     background: transparent;
     list-style: none;
     display: flex;
-    width: 317px;
-    justify-content: space-around;
+    width: 350px;
+    height: 50px;
+    justify-content: space-evenly;
 }
 
 .rsttop-header__download-target js-analytics {
@@ -90,4 +97,31 @@ h2 {
     color: #06c;
     text-decoration: none;
     display: block;
+}
+
+.caroucel-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    max-width: 1920px;
+    max-height: 600px;
+    object-fit: cover;
+}
+
+
+.content {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: flex-start;
+    position: relative;
+    width: 80%;
+    flex-direction: column;
+}
+
+
+.container-fluid {
+    padding: 0px;
+    margin: 0px;
 }
