캐러셸 이미지 추가

--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -77,7 +77,7 @@
     </nav>
 
 
-    <div class="content">
+    <div class="container">
         {% block body %}{% endblock body %}
     </div>
     {% bootstrap_javascript %}
