--- a/pjt/templates/root.html
+++ b/pjt/templates/root.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
-
+{% load static %}
 {% block body %}
 <div class="container-fluid" style="padding: 0px; margin: 0px;">
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+                <img src="{% static 'images/carousel_1.jpg' %}" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+                <img src="{% static 'images/carousel_2.jpg' %}"  class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="https://dummyimage.com/1920x600/000/fff" class="d-block w-100" alt="...">
+                <img src="{% static 'images/carousel_3.jpg' %}"  class="d-block w-100" alt="...">
             </div>
             <div class="box">
                 <ul class="box_inner">
