전반적 수정

--- a/Restaurant/templates/restaurant/create.html
+++ b/Restaurant/templates/restaurant/create.html
@@ -4,7 +4,7 @@
 {% block body %}
 
 {% if request.resolver_match.url_name == 'create' %}
-<h1> 가게 정보 작성 </h1>
+<h2> 가게 작성하기 </h2>
 {% else %}
 <h1> 수정하기 </h1>
 {% endif %}
