--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -81,7 +81,7 @@
         {% block body %}{% endblock body %}
     </div>
     {% bootstrap_javascript %}
-    <footer class="fixed-bottom text-center bg-white">© 2022 Food Box Information, PJT by 9조.</footer>
+    <footer class="fixed-bottom text-center bg-white">© 2022 Food Box Information, PJT by 9조</footer>
 
 </body>
 
