--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% load django_bootstrap5 %}
 {% block body %}
-<h1>회원정보</h1>
-<table class="table text-center align-middle">
+<br><h2>요원 목록</h2>
+<br><table class="table text-center align-middle">
     <thead>
+        <th>번호</th>
         <th>ID</th>
-        <th>username</th>
         <th>e-mail</th>
         <th>생성 날짜</th>
     </thead>
