--- a/users/templates/users/wishlist.html
+++ b/users/templates/users/wishlist.html
@@ -5,7 +5,7 @@
 
 <div class="con py-5 px-5" style="background-color: rgb(255,255,255)">
     <div class="row mt-5 text-center justify-content-center">
-        <h1 class="my-5">{{ user.username }}님의 프로필</h1>
+        <h2 class="my-5">{{ user.username }}님의 프로필</h2>
         <div>
             {% if profile.image %}
             <img src="{{ profile.image.url }}" alt="" style="width: 100px; height: 100px;">
@@ -16,7 +16,7 @@
             
         </div>
         </div>
-        <p class="mb-4">이름 :
+        <p class="mb-4"><br>이름 :
             {{ user.full_name }}</p>
         <p class="mb-4">이메일 :
             {{ user.email }}</p>
