--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,11 +1,48 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
-
+{% load static %}
 {% block body %}
-<h1>로그인</h1>
-<form action="" method="POST">
-    {% csrf_token %}
-    {% bootstrap_form form %}
-    {% bootstrap_button button_type="submit" content="OK" %}
-</form>
+
+
+<div class="container">
+    <div class="row d-flex justify-content-md-center text-center">
+
+        <div style="position: absolute; top: 40%; height: 476.06px; margin-top: -238.03px;">
+            <div class="d-flex justify-content-center">
+                <div class="card" style="width: 30rem;">
+
+                    <div class="card-body">
+                        <div class="text-center">
+                            <img src="{% static 'images/logo.png' %}" style="width:60%; margin:30px;">
+                        </div>
+
+                        <form method="POST" action="." novalidate>
+                            {% csrf_token %}
+
+                            <div class="mb-4 md-form">
+                                {% bootstrap_form form %}
+                                
+
+                            <!-- {{ login_form }} -->
+                            <label>
+                                <input type="checkbox" name="remember_session" />
+                                <span style="padding-bottom: 35px;">로그인 상태 유지</span>
+                            </label>
+                            <br>
+                            <!-- <input type="checkbox" name="remember_session" > 로그인 상태 유지<br><br> -->
+
+                            <button type="submit" style="opacity: 90%; font-size: 16px; margin-top: -5px;"
+                                class="btn btn-red btn-lg btn-block">로그인</button>
+                        </form>
+                        <div style="text-align: center;">
+                            <a style="color:gray; font-size: 14px;" href="{% url 'users:signup' %}">회원가입</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock body %}
