--- a/users/templates/users/detail.html
+++ b/users/templates/users/detail.html
@@ -20,6 +20,42 @@
             {{ user.full_name }}</p>
         <p class="mb-4">이메일 :
             {{ user.email }}</p>
+        <p class="mb-4">팔로잉 목록 :
+            <a id="detail_btn" data-bs-toggle="modal" data-bs-target="#following_modal">여기엔 팔로잉 숫자</a>
+        </p>
+        <div id="following_modal" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Following</h5>
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>여기에 팔로잉 목록</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="mb-4">팔로워 목록 :
+            <a id="detail_btn" data-bs-toggle="modal" data-bs-target="#follower_modal">여기엔 팔로워 숫자</a>
+        </p>
+        <div id="follower_modal" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Follower</h5>
+                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>여기에 팔로워 목록</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="d-flex text-start justify-content-evenly">
             <div class="mb-4">
                 <h4 class="fw-bold">작성한 글</h4>
